Enabled line wrapping for factory and ware names in print stylesheet to fix problem with too large table sizes.

--- a/src/main/resources/de/ailis/xadrian/templates/complex.css
+++ b/src/main/resources/de/ailis/xadrian/templates/complex.css
@@ -99,6 +99,11 @@ tr.autoodd, tr.autoeven, tr.kitsodd, tr.kitseven
     width: 100%;
 }
 
+.print .factory, .print .ware
+{
+    white-space: normal;
+}
+
 .factory-resources
 {
     padding-left: 15px;
